PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: XML formatting fix for non-OpenBenchmarking.org deployments
- pts-core: Do more to avoid zombie processes in stress-run manager
- phodevi: Support for reading AMDGPU OverDrive overclock offset

Phoronix Test Suite 6.4.0 Milestone 2
6 May 2016

- pts-core: Allow XML formatting from the Phoromatic Server web interface
- pts-core: Reformat stress-run log messages
- pts-core: Add "redis-server" as a potential external dependency for providing Redis
- pts-core: Statically set dynamic_run_count_on_length_or_less to 60
- pts-core: Adaptively increase regression threshold level in points_of_possible_interest() when too many results are being flagged
- phoromatic: Fix selecting the same test itself on the "build suite" page
- phoromatic: Do hard deletes when deleting results from admin area or results page
- phoromatic: Add basic support for deleting "local suites" from Phoromatic web UI
- phoromatic: Allow exporting system test run/build errors to the exported public results viewer
- phoromatic: Add PTS_NO_REBOOT_ON_NETWORK_FAILURE environment variable for clients where if network failure occurs, Phoromatic clients will not reboot
- phodevi: Add ambient.temp sensor for reporting ambient temperature, currently supports temperv14 USB sensors

Phoronix Test Suite 6.4.0 Milestone 1
25 April 2016

- pts-core: Many improvements to stress-run functionality
- pts-core: Add Midori to supported browser list
- pts-core: Add default logging support while running stress-run using phoronix-test-suite-stress.log filename
- pts-core: Additional fallback for locating if running PTS as a user from their home directory
- pts-core: Append date to phoronix-test-suite-stress-XXX.log when running stress-run
- phoromatic: Initial server-side implementation of new stress-run support via Phoromatic Server when going to "Run A Benchmark" and opting for stress mode